--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(plot_fig1)
 export(plot_fig2)
+export(plot_fig3)
+export(plot_fig4)
 export(run_n_zika_sims)
 export(zika_def_parms)
 import(cowplot)
+import(maptools)
