--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(plot_fig1)
 export(plot_fig2)
 export(plot_fig3)
 export(plot_fig4)
+export(plot_final_sizes)
 export(run_n_zika_sims)
 export(zika_def_parms)
 import(cowplot)
