--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(plot_fig4)
 export(plot_final_sizes)
 export(plot_zika_outbreaks)
 export(run_n_zika_sims)
+export(run_zika_sim)
 export(zika_def_parms)
 import(cowplot)
 import(maptools)
