--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(get_county_parms)
 export(get_epidemic_prob_by_d)
+export(plot_epi_prob)
 export(plot_fig1)
 export(plot_fig2)
 export(plot_fig3)
